--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,6 @@
 <h1>新規投稿</h1>
 <!-- form_with部分-->
-<%= form_with model: List.new do |f| %>
+<%= form_with model: @list, url: '/lists',method: :post do |f| %>
   <h4>タイトル</h4>
   <%= f.text_field :title %>
 
