--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,12 @@
 <h1>投稿一覧</h1>
-
 <% @lists.each do |list| %>
 
   <p>タイトル</p>
   <span>
-    <%= link_to list.title, "/lists/#{list.id}" %>
+    <%=link_to list.title, list_path(list.id) %>
   </span>
+
+  <p>画像</p>
+  <%= image_tag list.image, size: "200x200" %>
 
 <% end %>
